syntax = "proto3";
import "DTO/work_day.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Proto.Requests.WorkDays";

message GetAllWorkDaysRequestProto {}

message GetSelectedWorkDayRequestProto {}

message GetWorkDayByDateRequestProto {
  google.protobuf.Timestamp date = 1;
}

message WorkDayListProto {
  repeated WorkDayProto work_days = 1;
}

service WorkDayRequestService {
  rpc GetAllWorkDays(GetAllWorkDaysRequestProto) returns (WorkDayListProto);
  rpc GetSelectedWorkDay(GetSelectedWorkDayRequestProto) returns (WorkDayProto);
  rpc GetWorkDayByDate(GetWorkDayByDateRequestProto) returns (WorkDayProto);
}
